--- a/masterHelper.css
+++ b/masterHelper.css
@@ -34,6 +34,40 @@
     margin-left: 0px !important;
 }
 
+/* margin 5 */
+.m-5 {
+    margin: 5px;
+}
+.m-t-5 {
+    margin-top: 5px;
+}
+.m-r-5 {
+    margin-right: 5px;
+}
+.m-b-5 {
+    margin-bottom: 5px;
+}
+.m-l-5 {
+    margin-left: 5px;
+}
+
+/* margin 5 important */
+.m-5-i {
+    margin: 5px !important;
+}
+.m-t-5-i {
+    margin-top: 5px !important;
+}
+.m-r-5-i {
+    margin-right: 5px !important;
+}
+.m-b-5-i {
+    margin-bottom: 5px !important;
+}
+.m-l-5-i {
+    margin-left: 5px !important;
+}
+
 /* margin 10 */
 .m-10 {
     margin: 10px;
@@ -66,4 +100,1267 @@
 }
 .m-l-10-i {
     margin-left: 10px !important;
+}
+
+/* margin 15 */
+.m-15 {
+    margin: 15px;
+}
+.m-t-15 {
+    margin-top: 15px;
+}
+.m-r-15 {
+    margin-right: 15px;
+}
+.m-b-15 {
+    margin-bottom: 15px;
+}
+.m-l-15 {
+    margin-left: 15px;
+}
+
+/* margin 15 important */
+.m-15-i {
+    margin: 15px !important;
+}
+.m-t-15-i {
+    margin-top: 15px !important;
+}
+.m-r-15-i {
+    margin-right: 15px !important;
+}
+.m-b-15-i {
+    margin-bottom: 15px !important;
+}
+.m-l-15-i {
+    margin-left: 15px !important;
+}
+
+/* margin 20 */
+.m-20 {
+    margin: 20px;
+}
+.m-t-20 {
+    margin-top: 20px;
+}
+.m-r-20 {
+    margin-right: 20px;
+}
+.m-b-20 {
+    margin-bottom: 20px;
+}
+.m-l-20 {
+    margin-left: 20px;
+}
+
+/* margin 20 important */
+.m-20-i {
+    margin: 20px !important;
+}
+.m-t-20-i {
+    margin-top: 20px !important;
+}
+.m-r-20-i {
+    margin-right: 20px !important;
+}
+.m-b-20-i {
+    margin-bottom: 20px !important;
+}
+.m-l-20-i {
+    margin-left: 20px !important;
+}
+
+/* margin 25 */
+.m-25 {
+    margin: 25px;
+}
+.m-t-25 {
+    margin-top: 25px;
+}
+.m-r-25 {
+    margin-right: 25px;
+}
+.m-b-25 {
+    margin-bottom: 25px;
+}
+.m-l-25 {
+    margin-left: 25px;
+}
+
+/* margin 25 important */
+.m-25-i {
+    margin: 25px !important;
+}
+.m-t-25-i {
+    margin-top: 25px !important;
+}
+.m-r-25-i {
+    margin-right: 25px !important;
+}
+.m-b-25-i {
+    margin-bottom: 25px !important;
+}
+.m-l-25-i {
+    margin-left: 25px !important;
+}
+
+/* margin 30 */
+.m-30 {
+    margin: 30px;
+}
+.m-t-30 {
+    margin-top: 30px;
+}
+.m-r-30 {
+    margin-right: 30px;
+}
+.m-b-30 {
+    margin-bottom: 30px;
+}
+.m-l-30 {
+    margin-left: 30px;
+}
+
+/* margin 30 important */
+.m-30-i {
+    margin: 30px !important;
+}
+.m-t-30-i {
+    margin-top: 30px !important;
+}
+.m-r-30-i {
+    margin-right: 30px !important;
+}
+.m-b-30-i {
+    margin-bottom: 30px !important;
+}
+.m-l-30-i {
+    margin-left: 30px !important;
+}
+
+/* margin 40 */
+.m-40 {
+    margin: 40px;
+}
+.m-t-40 {
+    margin-top: 40px;
+}
+.m-r-40 {
+    margin-right: 40px;
+}
+.m-b-40 {
+    margin-bottom: 40px;
+}
+.m-l-40 {
+    margin-left: 40px;
+}
+
+/* margin 40 important */
+.m-40-i {
+    margin: 40px !important;
+}
+.m-t-40-i {
+    margin-top: 40px !important;
+}
+.m-r-40-i {
+    margin-right: 40px !important;
+}
+.m-b-40-i {
+    margin-bottom: 40px !important;
+}
+.m-l-40-i {
+    margin-left: 40px !important;
+}
+
+/* margin 50 */
+.m-50 {
+    margin: 50px;
+}
+.m-t-50 {
+    margin-top: 50px;
+}
+.m-r-50 {
+    margin-right: 50px;
+}
+.m-b-50 {
+    margin-bottom: 50px;
+}
+.m-l-50 {
+    margin-left: 50px;
+}
+
+/* margin 50 important */
+.m-50-i {
+    margin: 50px !important;
+}
+.m-t-50-i {
+    margin-top: 50px !important;
+}
+.m-r-50-i {
+    margin-right: 50px !important;
+}
+.m-b-50-i {
+    margin-bottom: 50px !important;
+}
+.m-l-50-i {
+    margin-left: 50px !important;
+}
+
+/* margin 60 */
+.m-60 {
+    margin: 60px;
+}
+.m-t-60 {
+    margin-top: 60px;
+}
+.m-r-60 {
+    margin-right: 60px;
+}
+.m-b-60 {
+    margin-bottom: 60px;
+}
+.m-l-60 {
+    margin-left: 60px;
+}
+
+/* margin 60 important */
+.m-60-i {
+    margin: 60px !important;
+}
+.m-t-60-i {
+    margin-top: 60px !important;
+}
+.m-r-60-i {
+    margin-right: 60px !important;
+}
+.m-b-60-i {
+    margin-bottom: 60px !important;
+}
+.m-l-60-i {
+    margin-left: 60px !important;
+}
+
+/* margin 70 */
+.m-70 {
+    margin: 70px;
+}
+.m-t-70 {
+    margin-top: 70px;
+}
+.m-r-70 {
+    margin-right: 70px;
+}
+.m-b-70 {
+    margin-bottom: 70px;
+}
+.m-l-70 {
+    margin-left: 70px;
+}
+
+/* margin 70 important */
+.m-70-i {
+    margin: 70px !important;
+}
+.m-t-70-i {
+    margin-top: 70px !important;
+}
+.m-r-70-i {
+    margin-right: 70px !important;
+}
+.m-b-70-i {
+    margin-bottom: 70px !important;
+}
+.m-l-70-i {
+    margin-left: 70px !important;
+}
+
+/* margin 80 */
+.m-80 {
+    margin: 80px;
+}
+.m-t-80 {
+    margin-top: 80px;
+}
+.m-r-80 {
+    margin-right: 80px;
+}
+.m-b-80 {
+    margin-bottom: 80px;
+}
+.m-l-80 {
+    margin-left: 80px;
+}
+
+/* margin 80 important */
+.m-80-i {
+    margin: 80px !important;
+}
+.m-t-80-i {
+    margin-top: 80px !important;
+}
+.m-r-80-i {
+    margin-right: 80px !important;
+}
+.m-b-80-i {
+    margin-bottom: 80px !important;
+}
+.m-l-80-i {
+    margin-left: 80px !important;
+}
+
+/* margin 90 */
+.m-90 {
+    margin: 90px;
+}
+.m-t-90 {
+    margin-top: 90px;
+}
+.m-r-90 {
+    margin-right: 90px;
+}
+.m-b-90 {
+    margin-bottom: 90px;
+}
+.m-l-90 {
+    margin-left: 90px;
+}
+
+/* margin 90 important */
+.m-90-i {
+    margin: 90px !important;
+}
+.m-t-90-i {
+    margin-top: 90px !important;
+}
+.m-r-90-i {
+    margin-right: 90px !important;
+}
+.m-b-90-i {
+    margin-bottom: 90px !important;
+}
+.m-l-90-i {
+    margin-left: 90px !important;
+}
+
+/* margin 100 */
+.m-100 {
+    margin: 100px;
+}
+.m-t-100 {
+    margin-top: 100px;
+}
+.m-r-100 {
+    margin-right: 100px;
+}
+.m-b-100 {
+    margin-bottom: 100px;
+}
+.m-l-100 {
+    margin-left: 100px;
+}
+
+/* margin 100 important */
+.m-100-i {
+    margin: 100px !important;
+}
+.m-t-100-i {
+    margin-top: 100px !important;
+}
+.m-r-100-i {
+    margin-right: 100px !important;
+}
+.m-b-100-i {
+    margin-bottom: 100px !important;
+}
+.m-l-100-i {
+    margin-left: 100px !important;
+}
+
+/* margin 150 */
+.m-150 {
+    margin: 150px;
+}
+.m-t-150 {
+    margin-top: 150px;
+}
+.m-r-150 {
+    margin-right: 150px;
+}
+.m-b-150 {
+    margin-bottom: 150px;
+}
+.m-l-150 {
+    margin-left: 150px;
+}
+
+/* margin 150 important */
+.m-150-i {
+    margin: 150px !important;
+}
+.m-t-150-i {
+    margin-top: 150px !important;
+}
+.m-r-150-i {
+    margin-right: 150px !important;
+}
+.m-b-150-i {
+    margin-bottom: 150px !important;
+}
+.m-l-150-i {
+    margin-left: 150px !important;
+}
+
+/* margin 200 */
+.m-200 {
+    margin: 200px;
+}
+.m-t-200 {
+    margin-top: 200px;
+}
+.m-r-200 {
+    margin-right: 200px;
+}
+.m-b-200 {
+    margin-bottom: 200px;
+}
+.m-l-200 {
+    margin-left: 200px;
+}
+
+/* margin 200 important */
+.m-200-i {
+    margin: 200px !important;
+}
+.m-t-200-i {
+    margin-top: 200px !important;
+}
+.m-r-200-i {
+    margin-right: 200px !important;
+}
+.m-b-200-i {
+    margin-bottom: 200px !important;
+}
+.m-l-200-i {
+    margin-left: 200px !important;
+}
+
+/* margin 250 */
+.m-250 {
+    margin: 250px;
+}
+.m-t-250 {
+    margin-top: 250px;
+}
+.m-r-250 {
+    margin-right: 250px;
+}
+.m-b-250 {
+    margin-bottom: 250px;
+}
+.m-l-250 {
+    margin-left: 250px;
+}
+
+/* margin 250 important */
+.m-250-i {
+    margin: 250px !important;
+}
+.m-t-250-i {
+    margin-top: 250px !important;
+}
+.m-r-250-i {
+    margin-right: 250px !important;
+}
+.m-b-250-i {
+    margin-bottom: 250px !important;
+}
+.m-l-250-i {
+    margin-left: 250px !important;
+}
+
+/* margin 300 */
+.m-300 {
+    margin: 300px;
+}
+.m-t-300 {
+    margin-top: 300px;
+}
+.m-r-300 {
+    margin-right: 300px;
+}
+.m-b-300 {
+    margin-bottom: 300px;
+}
+.m-l-300 {
+    margin-left: 300px;
+}
+
+/* margin 300 important */
+.m-300-i {
+    margin: 300px !important;
+}
+.m-t-300-i {
+    margin-top: 300px !important;
+}
+.m-r-300-i {
+    margin-right: 300px !important;
+}
+.m-b-300-i {
+    margin-bottom: 300px !important;
+}
+.m-l-300-i {
+    margin-left: 300px !important;
+}
+
+/* margin 400 */
+.m-400 {
+    margin: 400px;
+}
+.m-t-400 {
+    margin-top: 400px;
+}
+.m-r-400 {
+    margin-right: 400px;
+}
+.m-b-400 {
+    margin-bottom: 400px;
+}
+.m-l-400 {
+    margin-left: 400px;
+}
+
+/* margin 400 important */
+.m-400-i {
+    margin: 400px !important;
+}
+.m-t-400-i {
+    margin-top: 400px !important;
+}
+.m-r-400-i {
+    margin-right: 400px !important;
+}
+.m-b-400-i {
+    margin-bottom: 400px !important;
+}
+.m-l-400-i {
+    margin-left: 400px !important;
+}
+
+/* margin 500 */
+.m-500 {
+    margin: 500px;
+}
+.m-t-500 {
+    margin-top: 500px;
+}
+.m-r-500 {
+    margin-right: 500px;
+}
+.m-b-500 {
+    margin-bottom: 500px;
+}
+.m-l-500 {
+    margin-left: 500px;
+}
+
+/* margin 500 important */
+.m-500-i {
+    margin: 500px !important;
+}
+.m-t-500-i {
+    margin-top: 500px !important;
+}
+.m-r-500-i {
+    margin-right: 500px !important;
+}
+.m-b-500-i {
+    margin-bottom: 500px !important;
+}
+.m-l-500-i {
+    margin-left: 500px !important;
+}
+
+
+/* PADDINGS */
+
+/* MARGINS */
+
+/* padding 0 */
+.p-0 {
+    padding: 0px;
+}
+.p-t-0 {
+    padding-top: 0px;
+}
+.p-r-0 {
+    padding-right: 0px;
+}
+.p-b-0 {
+    padding-bottom: 0px;
+}
+.p-l-0 {
+    padding-left: 0px;
+}
+
+/* padding 0 important */
+.p-0-i {
+    padding: 0px !important;
+}
+.p-t-0-i {
+    padding-top: 0px !important;
+}
+.p-r-0-i {
+    padding-right: 0px !important;
+}
+.p-b-0-i {
+    padding-bottom: 0px !important;
+}
+.p-l-0-i {
+    padding-left: 0px !important;
+}
+
+/* padding 5 */
+.p-5 {
+    padding: 5px;
+}
+.p-t-5 {
+    padding-top: 5px;
+}
+.p-r-5 {
+    padding-right: 5px;
+}
+.p-b-5 {
+    padding-bottom: 5px;
+}
+.p-l-5 {
+    padding-left: 5px;
+}
+
+/* padding 5 important */
+.p-5-i {
+    padding: 5px !important;
+}
+.p-t-5-i {
+    padding-top: 5px !important;
+}
+.p-r-5-i {
+    padding-right: 5px !important;
+}
+.p-b-5-i {
+    padding-bottom: 5px !important;
+}
+.p-l-5-i {
+    padding-left: 5px !important;
+}
+
+/* padding 10 */
+.p-10 {
+    padding: 10px;
+}
+.p-t-10 {
+    padding-top: 10px;
+}
+.p-r-10 {
+    padding-right: 10px;
+}
+.p-b-10 {
+    padding-bottom: 10px;
+}
+.p-l-10 {
+    padding-left: 10px;
+}
+
+/* padding 10 important */
+.p-10-i {
+    padding: 10px !important;
+}
+.p-t-10-i {
+    padding-top: 10px !important;
+}
+.p-r-10-i {
+    padding-right: 10px !important;
+}
+.p-b-10-i {
+    padding-bottom: 10px !important;
+}
+.p-l-10-i {
+    padding-left: 10px !important;
+}
+
+/* padding 15 */
+.p-15 {
+    padding: 15px;
+}
+.p-t-15 {
+    padding-top: 15px;
+}
+.p-r-15 {
+    padding-right: 15px;
+}
+.p-b-15 {
+    padding-bottom: 15px;
+}
+.p-l-15 {
+    padding-left: 15px;
+}
+
+/* padding 15 important */
+.p-15-i {
+    padding: 15px !important;
+}
+.p-t-15-i {
+    padding-top: 15px !important;
+}
+.p-r-15-i {
+    padding-right: 15px !important;
+}
+.p-b-15-i {
+    padding-bottom: 15px !important;
+}
+.p-l-15-i {
+    padding-left: 15px !important;
+}
+
+/* padding 20 */
+.p-20 {
+    padding: 20px;
+}
+.p-t-20 {
+    padding-top: 20px;
+}
+.p-r-20 {
+    padding-right: 20px;
+}
+.p-b-20 {
+    padding-bottom: 20px;
+}
+.p-l-20 {
+    padding-left: 20px;
+}
+
+/* padding 20 important */
+.p-20-i {
+    padding: 20px !important;
+}
+.p-t-20-i {
+    padding-top: 20px !important;
+}
+.p-r-20-i {
+    padding-right: 20px !important;
+}
+.p-b-20-i {
+    padding-bottom: 20px !important;
+}
+.p-l-20-i {
+    padding-left: 20px !important;
+}
+
+/* padding 25 */
+.p-25 {
+    padding: 25px;
+}
+.p-t-25 {
+    padding-top: 25px;
+}
+.p-r-25 {
+    padding-right: 25px;
+}
+.p-b-25 {
+    padding-bottom: 25px;
+}
+.p-l-25 {
+    padding-left: 25px;
+}
+
+/* padding 25 important */
+.p-25-i {
+    padding: 25px !important;
+}
+.p-t-25-i {
+    padding-top: 25px !important;
+}
+.p-r-25-i {
+    padding-right: 25px !important;
+}
+.p-b-25-i {
+    padding-bottom: 25px !important;
+}
+.p-l-25-i {
+    padding-left: 25px !important;
+}
+
+/* padding 30 */
+.p-30 {
+    padding: 30px;
+}
+.p-t-30 {
+    padding-top: 30px;
+}
+.p-r-30 {
+    padding-right: 30px;
+}
+.p-b-30 {
+    padding-bottom: 30px;
+}
+.p-l-30 {
+    padding-left: 30px;
+}
+
+/* padding 30 important */
+.p-30-i {
+    padding: 30px !important;
+}
+.p-t-30-i {
+    padding-top: 30px !important;
+}
+.p-r-30-i {
+    padding-right: 30px !important;
+}
+.p-b-30-i {
+    padding-bottom: 30px !important;
+}
+.p-l-30-i {
+    padding-left: 30px !important;
+}
+
+/* padding 40 */
+.p-40 {
+    padding: 40px;
+}
+.p-t-40 {
+    padding-top: 40px;
+}
+.p-r-40 {
+    padding-right: 40px;
+}
+.p-b-40 {
+    padding-bottom: 40px;
+}
+.p-l-40 {
+    padding-left: 40px;
+}
+
+/* padding 40 important */
+.p-40-i {
+    padding: 40px !important;
+}
+.p-t-40-i {
+    padding-top: 40px !important;
+}
+.p-r-40-i {
+    padding-right: 40px !important;
+}
+.p-b-40-i {
+    padding-bottom: 40px !important;
+}
+.p-l-40-i {
+    padding-left: 40px !important;
+}
+
+/* padding 50 */
+.p-50 {
+    padding: 50px;
+}
+.p-t-50 {
+    padding-top: 50px;
+}
+.p-r-50 {
+    padding-right: 50px;
+}
+.p-b-50 {
+    padding-bottom: 50px;
+}
+.p-l-50 {
+    padding-left: 50px;
+}
+
+/* padding 50 important */
+.p-50-i {
+    padding: 50px !important;
+}
+.p-t-50-i {
+    padding-top: 50px !important;
+}
+.p-r-50-i {
+    padding-right: 50px !important;
+}
+.p-b-50-i {
+    padding-bottom: 50px !important;
+}
+.p-l-50-i {
+    padding-left: 50px !important;
+}
+
+/* padding 60 */
+.p-60 {
+    padding: 60px;
+}
+.p-t-60 {
+    padding-top: 60px;
+}
+.p-r-60 {
+    padding-right: 60px;
+}
+.p-b-60 {
+    padding-bottom: 60px;
+}
+.p-l-60 {
+    padding-left: 60px;
+}
+
+/* padding 60 important */
+.p-60-i {
+    padding: 60px !important;
+}
+.p-t-60-i {
+    padding-top: 60px !important;
+}
+.p-r-60-i {
+    padding-right: 60px !important;
+}
+.p-b-60-i {
+    padding-bottom: 60px !important;
+}
+.p-l-60-i {
+    padding-left: 60px !important;
+}
+
+/* padding 70 */
+.p-70 {
+    padding: 70px;
+}
+.p-t-70 {
+    padding-top: 70px;
+}
+.p-r-70 {
+    padding-right: 70px;
+}
+.p-b-70 {
+    padding-bottom: 70px;
+}
+.p-l-70 {
+    padding-left: 70px;
+}
+
+/* padding 70 important */
+.p-70-i {
+    padding: 70px !important;
+}
+.p-t-70-i {
+    padding-top: 70px !important;
+}
+.p-r-70-i {
+    padding-right: 70px !important;
+}
+.p-b-70-i {
+    padding-bottom: 70px !important;
+}
+.p-l-70-i {
+    padding-left: 70px !important;
+}
+
+/* padding 80 */
+.p-80 {
+    padding: 80px;
+}
+.p-t-80 {
+    padding-top: 80px;
+}
+.p-r-80 {
+    padding-right: 80px;
+}
+.p-b-80 {
+    padding-bottom: 80px;
+}
+.p-l-80 {
+    padding-left: 80px;
+}
+
+/* padding 80 important */
+.p-80-i {
+    padding: 80px !important;
+}
+.p-t-80-i {
+    padding-top: 80px !important;
+}
+.p-r-80-i {
+    padding-right: 80px !important;
+}
+.p-b-80-i {
+    padding-bottom: 80px !important;
+}
+.p-l-80-i {
+    padding-left: 80px !important;
+}
+
+/* padding 90 */
+.p-90 {
+    padding: 90px;
+}
+.p-t-90 {
+    padding-top: 90px;
+}
+.p-r-90 {
+    padding-right: 90px;
+}
+.p-b-90 {
+    padding-bottom: 90px;
+}
+.p-l-90 {
+    padding-left: 90px;
+}
+
+/* padding 90 important */
+.p-90-i {
+    padding: 90px !important;
+}
+.p-t-90-i {
+    padding-top: 90px !important;
+}
+.p-r-90-i {
+    padding-right: 90px !important;
+}
+.p-b-90-i {
+    padding-bottom: 90px !important;
+}
+.p-l-90-i {
+    padding-left: 90px !important;
+}
+
+/* padding 100 */
+.p-100 {
+    padding: 100px;
+}
+.p-t-100 {
+    padding-top: 100px;
+}
+.p-r-100 {
+    padding-right: 100px;
+}
+.p-b-100 {
+    padding-bottom: 100px;
+}
+.p-l-100 {
+    padding-left: 100px;
+}
+
+/* padding 100 important */
+.p-100-i {
+    padding: 100px !important;
+}
+.p-t-100-i {
+    padding-top: 100px !important;
+}
+.p-r-100-i {
+    padding-right: 100px !important;
+}
+.p-b-100-i {
+    padding-bottom: 100px !important;
+}
+.p-l-100-i {
+    padding-left: 100px !important;
+}
+
+/* padding 150 */
+.p-150 {
+    padding: 150px;
+}
+.p-t-150 {
+    padding-top: 150px;
+}
+.p-r-150 {
+    padding-right: 150px;
+}
+.p-b-150 {
+    padding-bottom: 150px;
+}
+.p-l-150 {
+    padding-left: 150px;
+}
+
+/* padding 150 important */
+.p-150-i {
+    padding: 150px !important;
+}
+.p-t-150-i {
+    padding-top: 150px !important;
+}
+.p-r-150-i {
+    padding-right: 150px !important;
+}
+.p-b-150-i {
+    padding-bottom: 150px !important;
+}
+.p-l-150-i {
+    padding-left: 150px !important;
+}
+
+/* padding 200 */
+.p-200 {
+    padding: 200px;
+}
+.p-t-200 {
+    padding-top: 200px;
+}
+.p-r-200 {
+    padding-right: 200px;
+}
+.p-b-200 {
+    padding-bottom: 200px;
+}
+.p-l-200 {
+    padding-left: 200px;
+}
+
+/* padding 200 important */
+.p-200-i {
+    padding: 200px !important;
+}
+.p-t-200-i {
+    padding-top: 200px !important;
+}
+.p-r-200-i {
+    padding-right: 200px !important;
+}
+.p-b-200-i {
+    padding-bottom: 200px !important;
+}
+.p-l-200-i {
+    padding-left: 200px !important;
+}
+
+/* padding 250 */
+.p-250 {
+    padding: 250px;
+}
+.p-t-250 {
+    padding-top: 250px;
+}
+.p-r-250 {
+    padding-right: 250px;
+}
+.p-b-250 {
+    padding-bottom: 250px;
+}
+.p-l-250 {
+    padding-left: 250px;
+}
+
+/* padding 250 important */
+.p-250-i {
+    padding: 250px !important;
+}
+.p-t-250-i {
+    padding-top: 250px !important;
+}
+.p-r-250-i {
+    padding-right: 250px !important;
+}
+.p-b-250-i {
+    padding-bottom: 250px !important;
+}
+.p-l-250-i {
+    padding-left: 250px !important;
+}
+
+/* padding 300 */
+.p-300 {
+    padding: 300px;
+}
+.p-t-300 {
+    padding-top: 300px;
+}
+.p-r-300 {
+    padding-right: 300px;
+}
+.p-b-300 {
+    padding-bottom: 300px;
+}
+.p-l-300 {
+    padding-left: 300px;
+}
+
+/* padding 300 important */
+.p-300-i {
+    padding: 300px !important;
+}
+.p-t-300-i {
+    padding-top: 300px !important;
+}
+.p-r-300-i {
+    padding-right: 300px !important;
+}
+.p-b-300-i {
+    padding-bottom: 300px !important;
+}
+.p-l-300-i {
+    padding-left: 300px !important;
+}
+
+/* padding 400 */
+.p-400 {
+    padding: 400px;
+}
+.p-t-400 {
+    padding-top: 400px;
+}
+.p-r-400 {
+    padding-right: 400px;
+}
+.p-b-400 {
+    padding-bottom: 400px;
+}
+.p-l-400 {
+    padding-left: 400px;
+}
+
+/* padding 400 important */
+.p-400-i {
+    padding: 400px !important;
+}
+.p-t-400-i {
+    padding-top: 400px !important;
+}
+.p-r-400-i {
+    padding-right: 400px !important;
+}
+.p-b-400-i {
+    padding-bottom: 400px !important;
+}
+.p-l-400-i {
+    padding-left: 400px !important;
+}
+
+/* padding 500 */
+.p-500 {
+    padding: 500px;
+}
+.p-t-500 {
+    padding-top: 500px;
+}
+.p-r-500 {
+    padding-right: 500px;
+}
+.p-b-500 {
+    padding-bottom: 500px;
+}
+.p-l-500 {
+    padding-left: 500px;
+}
+
+/* padding 500 important */
+.p-500-i {
+    padding: 500px !important;
+}
+.p-t-500-i {
+    padding-top: 500px !important;
+}
+.p-r-500-i {
+    padding-right: 500px !important;
+}
+.p-b-500-i {
+    padding-bottom: 500px !important;
+}
+.p-l-500-i {
+    padding-left: 500px !important;
 }
