--- a/masterHelper.css
+++ b/masterHelper.css
@@ -1508,19 +1508,1319 @@ DISPLAYS
 
 /* OVERFLOWS */
 
-/* BORDERS */
+.overflow-scroll {
+    overflow: scroll;
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.overflow-visible {
+    overflow: visible;
+}
+
+.overflow-scroll-i {
+    overflow: scroll !important;
+}
+
+.overflow-hidden-i {
+    overflow: hidden !important;
+}
+
+.overflow-visible-i {
+    overflow: visible !important;
+}
+
+.overflow-x-scroll {
+    overflow-x: scroll;
+}
+
+.overflow-x-hidden {
+    overflow-x: hidden;
+}
+
+.overflow-x-visible {
+    overflow-x: visible;
+}
+
+.overflow-x-scroll-i {
+    overflow-x: scroll !important;
+}
+
+.overflow-x-hidden-i {
+    overflow-x: hidden !important;
+}
+
+.overflow-x-visible-i {
+    overflow-x: visible !important;
+}
+
+.overflow-y-scroll {
+    overflow-y: scroll;
+}
+
+.overflow-y-hidden {
+    overflow-y: hidden;
+}
+
+.overflow-y-visible {
+    overflow-y: visible;
+}
+
+.overflow-y-scroll-i {
+    overflow-y: scroll !important;
+}
+
+.overflow-y-hidden-i {
+    overflow-y: hidden !important;
+}
+
+.overflow-y-visible-i {
+    overflow-y: visible !important;
+}
 
 /* WIDTHS */
 
+.width-0 {
+    width: 0px;
+}
+
+.width-1 {
+    width: 1px;
+}
+
+.width-2 {
+    width: 2px;
+}
+
+.width-3 {
+    width: 3px;
+}
+
+.width-4 {
+    width: 4px;
+}
+
+.width-5 {
+    width: 5px;
+}
+
+.width-8 {
+    width: 8px;
+}
+
+.width-10 {
+    width: 10px;
+}
+
+.width-15 {
+    width: 15px;
+}
+
+.width-16 {
+    width: 16px;
+}
+
+.width-20 {
+    width: 20px;
+}
+
+.width-25 {
+    width: 25px;
+}
+
+.width-30 {
+    width: 30px;
+}
+
+.width-32 {
+    width: 32px;
+}
+
+.width-35 {
+    width: 35px;
+}
+
+.width-40 {
+    width: 40px;
+}
+
+.width-45 {
+    width: 45px;
+}
+
+.width-50 {
+    width: 50px;
+}
+
+.width-64 {
+    width: 64px;
+}
+
+.width-75 {
+    width: 75px;
+}
+
+.width-100 {
+    width: 100px;
+}
+
+.width-125 {
+    width: 125px;
+}
+
+.width-128 {
+    width: 128px;
+}
+
+.width-150 {
+    width: 150px;
+}
+
+.width-200 {
+    width: 200px;
+}
+
+.width-250 {
+    width: 250px;
+}
+
+
+.width-1-i {
+    width: 1px !important;
+}
+
+.width-2-i {
+    width: 2px !important;
+}
+
+.width-3-i {
+    width: 3px !important;
+}
+
+.width-4-i {
+    width: 4px !important;
+}
+
+.width-5-i {
+    width: 5px !important;
+}
+
+.width-8-i {
+    width: 8px !important;
+}
+
+.width-10-i {
+    width: 10px !important;
+}
+
+.width-15-i {
+    width: 15px !important;
+}
+
+.width-16-i {
+    width: 16px !important;
+}
+
+.width-20-i {
+    width: 20px !important;
+}
+
+.width-25-i {
+    width: 25px !important;
+}
+
+.width-30-i {
+    width: 30px !important;
+}
+
+.width-32-i {
+    width: 32px !important;
+}
+
+.width-35-i {
+    width: 35px !important;
+}
+
+.width-40-i {
+    width: 40px !important;
+}
+
+.width-45-i {
+    width: 45px !important;
+}
+
+.width-50-i {
+    width: 50px !important;
+}
+
+.width-64-i {
+    width: 64px !important;
+}
+
+.width-75-i {
+    width: 75px !important;
+}
+
+.width-100-i {
+    width: 100px !important;
+}
+
+.width-125-i {
+    width: 125px !important;
+}
+
+.width-128-i {
+    width: 128px !important;
+}
+
+.width-150-i {
+    width: 150px !important;
+}
+
+.width-200-i {
+    width: 200px !important;
+}
+
+.width-250-i {
+    width: 250px !important;
+}
+
 /* MIN WIDTHS */
+
+.min-width-0 {
+    min-width: 0px;
+}
+
+.min-width-1 {
+    min-width: 1px;
+}
+
+.min-width-2 {
+    min-width: 2px;
+}
+
+.min-width-3 {
+    min-width: 3px;
+}
+
+.min-width-4 {
+    min-width: 4px;
+}
+
+.min-width-5 {
+    min-width: 5px;
+}
+
+.min-width-8 {
+    min-width: 8px;
+}
+
+.min-width-10 {
+    min-width: 10px;
+}
+
+.min-width-15 {
+    min-width: 15px;
+}
+
+.min-width-16 {
+    min-width: 16px;
+}
+
+.min-width-20 {
+    min-width: 20px;
+}
+
+.min-width-25 {
+    min-width: 25px;
+}
+
+.min-width-30 {
+    min-width: 30px;
+}
+
+.min-width-32 {
+    min-width: 32px;
+}
+
+.min-width-35 {
+    min-width: 35px;
+}
+
+.min-width-40 {
+    min-width: 40px;
+}
+
+.min-width-45 {
+    min-width: 45px;
+}
+
+.min-width-50 {
+    min-width: 50px;
+}
+
+.min-width-64 {
+    min-width: 64px;
+}
+
+.min-width-75 {
+    min-width: 75px;
+}
+
+.min-width-100 {
+    min-width: 100px;
+}
+
+.min-width-125 {
+    min-width: 125px;
+}
+
+.min-width-128 {
+    min-width: 128px;
+}
+
+.min-width-150 {
+    min-width: 150px;
+}
+
+.min-width-200 {
+    min-width: 200px;
+}
+
+.min-width-250 {
+    min-width: 250px;
+}
+
+
+.min-width-1-i {
+    min-width: 1px !important;
+}
+
+.min-width-2-i {
+    min-width: 2px !important;
+}
+
+.min-width-3-i {
+    min-width: 3px !important;
+}
+
+.min-width-4-i {
+    min-width: 4px !important;
+}
+
+.min-width-5-i {
+    min-width: 5px !important;
+}
+
+.min-width-8-i {
+    min-width: 8px !important;
+}
+
+.min-width-10-i {
+    min-width: 10px !important;
+}
+
+.min-width-15-i {
+    min-width: 15px !important;
+}
+
+.min-width-16-i {
+    min-width: 16px !important;
+}
+
+.min-width-20-i {
+    min-width: 20px !important;
+}
+
+.min-width-25-i {
+    min-width: 25px !important;
+}
+
+.min-width-30-i {
+    min-width: 30px !important;
+}
+
+.min-width-32-i {
+    min-width: 32px !important;
+}
+
+.min-width-35-i {
+    min-width: 35px !important;
+}
+
+.min-width-40-i {
+    min-width: 40px !important;
+}
+
+.min-width-45-i {
+    min-width: 45px !important;
+}
+
+.min-width-50-i {
+    min-width: 50px !important;
+}
+
+.min-width-64-i {
+    min-width: 64px !important;
+}
+
+.min-width-75-i {
+    min-width: 75px !important;
+}
+
+.min-width-100-i {
+    min-width: 100px !important;
+}
+
+.min-width-125-i {
+    min-width: 125px !important;
+}
+
+.min-width-128-i {
+    min-width: 128px !important;
+}
+
+.min-width-150-i {
+    min-width: 150px !important;
+}
+
+.min-width-200-i {
+    min-width: 200px !important;
+}
+
+.min-width-250-i {
+    min-width: 250px !important;
+}
 
 /* MAX WIDTHS */
 
+.max-width-0 {
+    max-width: 0px;
+}
+
+.max-width-1 {
+    max-width: 1px;
+}
+
+.max-width-2 {
+    max-width: 2px;
+}
+
+.max-width-3 {
+    max-width: 3px;
+}
+
+.max-width-4 {
+    max-width: 4px;
+}
+
+.max-width-5 {
+    max-width: 5px;
+}
+
+.max-width-8 {
+    max-width: 8px;
+}
+
+.max-width-10 {
+    max-width: 10px;
+}
+
+.max-width-15 {
+    max-width: 15px;
+}
+
+.max-width-16 {
+    max-width: 16px;
+}
+
+.max-width-20 {
+    max-width: 20px;
+}
+
+.max-width-25 {
+    max-width: 25px;
+}
+
+.max-width-30 {
+    max-width: 30px;
+}
+
+.max-width-32 {
+    max-width: 32px;
+}
+
+.max-width-35 {
+    max-width: 35px;
+}
+
+.max-width-40 {
+    max-width: 40px;
+}
+
+.max-width-45 {
+    max-width: 45px;
+}
+
+.max-width-50 {
+    max-width: 50px;
+}
+
+.max-width-64 {
+    max-width: 64px;
+}
+
+.max-width-75 {
+    max-width: 75px;
+}
+
+.max-width-100 {
+    max-width: 100px;
+}
+
+.max-width-125 {
+    max-width: 125px;
+}
+
+.max-width-128 {
+    max-width: 128px;
+}
+
+.max-width-150 {
+    max-width: 150px;
+}
+
+.max-width-200 {
+    max-width: 200px;
+}
+
+.max-width-250 {
+    max-width: 250px;
+}
+
+
+.max-width-1-i {
+    max-width: 1px !important;
+}
+
+.max-width-2-i {
+    max-width: 2px !important;
+}
+
+.max-width-3-i {
+    max-width: 3px !important;
+}
+
+.max-width-4-i {
+    max-width: 4px !important;
+}
+
+.max-width-5-i {
+    max-width: 5px !important;
+}
+
+.max-width-8-i {
+    max-width: 8px !important;
+}
+
+.max-width-10-i {
+    max-width: 10px !important;
+}
+
+.max-width-15-i {
+    max-width: 15px !important;
+}
+
+.max-width-16-i {
+    max-width: 16px !important;
+}
+
+.max-width-20-i {
+    max-width: 20px !important;
+}
+
+.max-width-25-i {
+    max-width: 25px !important;
+}
+
+.max-width-30-i {
+    max-width: 30px !important;
+}
+
+.max-width-32-i {
+    max-width: 32px !important;
+}
+
+.max-width-35-i {
+    max-width: 35px !important;
+}
+
+.max-width-40-i {
+    max-width: 40px !important;
+}
+
+.max-width-45-i {
+    max-width: 45px !important;
+}
+
+.max-width-50-i {
+    max-width: 50px !important;
+}
+
+.max-width-64-i {
+    max-width: 64px !important;
+}
+
+.max-width-75-i {
+    max-width: 75px !important;
+}
+
+.max-width-100-i {
+    max-width: 100px !important;
+}
+
+.max-width-125-i {
+    max-width: 125px !important;
+}
+
+.max-width-128-i {
+    max-width: 128px !important;
+}
+
+.max-width-150-i {
+    max-width: 150px !important;
+}
+
+.max-width-200-i {
+    max-width: 200px !important;
+}
+
+.max-width-250-i {
+    max-width: 250px !important;
+}
+
 /* HEIGHTS */
+
+.height-0 {
+    height: 0px;
+}
+
+.height-1 {
+    height: 1px;
+}
+
+.height-2 {
+    height: 2px;
+}
+
+.height-3 {
+    height: 3px;
+}
+
+.height-4 {
+    height: 4px;
+}
+
+.height-5 {
+    height: 5px;
+}
+
+.height-8 {
+    height: 8px;
+}
+
+.height-10 {
+    height: 10px;
+}
+
+.height-15 {
+    height: 15px;
+}
+
+.height-16 {
+    height: 16px;
+}
+
+.height-20 {
+    height: 20px;
+}
+
+.height-25 {
+    height: 25px;
+}
+
+.height-30 {
+    height: 30px;
+}
+
+.height-32 {
+    height: 32px;
+}
+
+.height-35 {
+    height: 35px;
+}
+
+.height-40 {
+    height: 40px;
+}
+
+.height-45 {
+    height: 45px;
+}
+
+.height-50 {
+    height: 50px;
+}
+
+.height-64 {
+    height: 64px;
+}
+
+.height-75 {
+    height: 75px;
+}
+
+.height-100 {
+    height: 100px;
+}
+
+.height-125 {
+    height: 125px;
+}
+
+.height-128 {
+    height: 128px;
+}
+
+.height-150 {
+    height: 150px;
+}
+
+.height-200 {
+    height: 200px;
+}
+
+.height-250 {
+    height: 250px;
+}
+
+
+.height-1-i {
+    height: 1px !important;
+}
+
+.height-2-i {
+    height: 2px !important;
+}
+
+.height-3-i {
+    height: 3px !important;
+}
+
+.height-4-i {
+    height: 4px !important;
+}
+
+.height-5-i {
+    height: 5px !important;
+}
+
+.height-8-i {
+    height: 8px !important;
+}
+
+.height-10-i {
+    height: 10px !important;
+}
+
+.height-15-i {
+    height: 15px !important;
+}
+
+.height-16-i {
+    height: 16px !important;
+}
+
+.height-20-i {
+    height: 20px !important;
+}
+
+.height-25-i {
+    height: 25px !important;
+}
+
+.height-30-i {
+    height: 30px !important;
+}
+
+.height-32-i {
+    height: 32px !important;
+}
+
+.height-35-i {
+    height: 35px !important;
+}
+
+.height-40-i {
+    height: 40px !important;
+}
+
+.height-45-i {
+    height: 45px !important;
+}
+
+.height-50-i {
+    height: 50px !important;
+}
+
+.height-64-i {
+    height: 64px !important;
+}
+
+.height-75-i {
+    height: 75px !important;
+}
+
+.height-100-i {
+    height: 100px !important;
+}
+
+.height-125-i {
+    height: 125px !important;
+}
+
+.height-128-i {
+    height: 128px !important;
+}
+
+.height-150-i {
+    height: 150px !important;
+}
+
+.height-200-i {
+    height: 200px !important;
+}
+
+.height-250-i {
+    height: 250px !important;
+}
 
 /* MIN HEIGHTS */
 
+.min-height-0 {
+    min-height: 0px;
+}
+
+.min-height-1 {
+    min-height: 1px;
+}
+
+.min-height-2 {
+    min-height: 2px;
+}
+
+.min-height-3 {
+    min-height: 3px;
+}
+
+.min-height-4 {
+    min-height: 4px;
+}
+
+.min-height-5 {
+    min-height: 5px;
+}
+
+.min-height-8 {
+    min-height: 8px;
+}
+
+.min-height-10 {
+    min-height: 10px;
+}
+
+.min-height-15 {
+    min-height: 15px;
+}
+
+.min-height-16 {
+    min-height: 16px;
+}
+
+.min-height-20 {
+    min-height: 20px;
+}
+
+.min-height-25 {
+    min-height: 25px;
+}
+
+.min-height-30 {
+    min-height: 30px;
+}
+
+.min-height-32 {
+    min-height: 32px;
+}
+
+.min-height-35 {
+    min-height: 35px;
+}
+
+.min-height-40 {
+    min-height: 40px;
+}
+
+.min-height-45 {
+    min-height: 45px;
+}
+
+.min-height-50 {
+    min-height: 50px;
+}
+
+.min-height-64 {
+    min-height: 64px;
+}
+
+.min-height-75 {
+    min-height: 75px;
+}
+
+.min-height-100 {
+    min-height: 100px;
+}
+
+.min-height-125 {
+    min-height: 125px;
+}
+
+.min-height-128 {
+    min-height: 128px;
+}
+
+.min-height-150 {
+    min-height: 150px;
+}
+
+.min-height-200 {
+    min-height: 200px;
+}
+
+.min-height-250 {
+    min-height: 250px;
+}
+
+
+.min-height-1-i {
+    min-height: 1px !important;
+}
+
+.min-height-2-i {
+    min-height: 2px !important;
+}
+
+.min-height-3-i {
+    min-height: 3px !important;
+}
+
+.min-height-4-i {
+    min-height: 4px !important;
+}
+
+.min-height-5-i {
+    min-height: 5px !important;
+}
+
+.min-height-8-i {
+    min-height: 8px !important;
+}
+
+.min-height-10-i {
+    min-height: 10px !important;
+}
+
+.min-height-15-i {
+    min-height: 15px !important;
+}
+
+.min-height-16-i {
+    min-height: 16px !important;
+}
+
+.min-height-20-i {
+    min-height: 20px !important;
+}
+
+.min-height-25-i {
+    min-height: 25px !important;
+}
+
+.min-height-30-i {
+    min-height: 30px !important;
+}
+
+.min-height-32-i {
+    min-height: 32px !important;
+}
+
+.min-height-35-i {
+    min-height: 35px !important;
+}
+
+.min-height-40-i {
+    min-height: 40px !important;
+}
+
+.min-height-45-i {
+    min-height: 45px !important;
+}
+
+.min-height-50-i {
+    min-height: 50px !important;
+}
+
+.min-height-64-i {
+    min-height: 64px !important;
+}
+
+.min-height-75-i {
+    min-height: 75px !important;
+}
+
+.min-height-100-i {
+    min-height: 100px !important;
+}
+
+.min-height-125-i {
+    min-height: 125px !important;
+}
+
+.min-height-128-i {
+    min-height: 128px !important;
+}
+
+.min-height-150-i {
+    min-height: 150px !important;
+}
+
+.min-height-200-i {
+    min-height: 200px !important;
+}
+
+.min-height-250-i {
+    min-height: 250px !important;
+}
+
 /* MAX HEIGHTS */
+
+.max-height-0 {
+    max-height: 0px;
+}
+
+.max-height-1 {
+    max-height: 1px;
+}
+
+.max-height-2 {
+    max-height: 2px;
+}
+
+.max-height-3 {
+    max-height: 3px;
+}
+
+.max-height-4 {
+    max-height: 4px;
+}
+
+.max-height-5 {
+    max-height: 5px;
+}
+
+.max-height-8 {
+    max-height: 8px;
+}
+
+.max-height-10 {
+    max-height: 10px;
+}
+
+.max-height-15 {
+    max-height: 15px;
+}
+
+.max-height-16 {
+    max-height: 16px;
+}
+
+.max-height-20 {
+    max-height: 20px;
+}
+
+.max-height-25 {
+    max-height: 25px;
+}
+
+.max-height-30 {
+    max-height: 30px;
+}
+
+.max-height-32 {
+    max-height: 32px;
+}
+
+.max-height-35 {
+    max-height: 35px;
+}
+
+.max-height-40 {
+    max-height: 40px;
+}
+
+.max-height-45 {
+    max-height: 45px;
+}
+
+.max-height-50 {
+    max-height: 50px;
+}
+
+.max-height-64 {
+    max-height: 64px;
+}
+
+.max-height-75 {
+    max-height: 75px;
+}
+
+.max-height-100 {
+    max-height: 100px;
+}
+
+.max-height-125 {
+    max-height: 125px;
+}
+
+.max-height-128 {
+    max-height: 128px;
+}
+
+.max-height-150 {
+    max-height: 150px;
+}
+
+.max-height-200 {
+    max-height: 200px;
+}
+
+.max-height-250 {
+    max-height: 250px;
+}
+
+
+.max-height-1-i {
+    max-height: 1px !important;
+}
+
+.max-height-2-i {
+    max-height: 2px !important;
+}
+
+.max-height-3-i {
+    max-height: 3px !important;
+}
+
+.max-height-4-i {
+    max-height: 4px !important;
+}
+
+.max-height-5-i {
+    max-height: 5px !important;
+}
+
+.max-height-8-i {
+    max-height: 8px !important;
+}
+
+.max-height-10-i {
+    max-height: 10px !important;
+}
+
+.max-height-15-i {
+    max-height: 15px !important;
+}
+
+.max-height-16-i {
+    max-height: 16px !important;
+}
+
+.max-height-20-i {
+    max-height: 20px !important;
+}
+
+.max-height-25-i {
+    max-height: 25px !important;
+}
+
+.max-height-30-i {
+    max-height: 30px !important;
+}
+
+.max-height-32-i {
+    max-height: 32px !important;
+}
+
+.max-height-35-i {
+    max-height: 35px !important;
+}
+
+.max-height-40-i {
+    max-height: 40px !important;
+}
+
+.max-height-45-i {
+    max-height: 45px !important;
+}
+
+.max-height-50-i {
+    max-height: 50px !important;
+}
+
+.max-height-64-i {
+    max-height: 64px !important;
+}
+
+.max-height-75-i {
+    max-height: 75px !important;
+}
+
+.max-height-100-i {
+    max-height: 100px !important;
+}
+
+.max-height-125-i {
+    max-height: 125px !important;
+}
+
+.max-height-128-i {
+    max-height: 128px !important;
+}
+
+.max-height-150-i {
+    max-height: 150px !important;
+}
+
+.max-height-200-i {
+    max-height: 200px !important;
+}
+
+.max-height-250-i {
+    max-height: 250px !important;
+}
 
 /* CURSORS */
 
@@ -1551,3 +2851,7 @@ DISPLAYS
 /* CLEARS */
 
 /* BOX-SIZINGS */
+
+
+/* BORDERS */
+/* TODO */
